P01/Tests/SyntaxErrors/duptrans.tm
states 3
$
% +
^ -
alphabet 2 $ &
$ $ $ $ R
$ $ $ $ R
